# ettllama

./: Cargo.toml  README.md
ettllama-cli/: Cargo.toml
ettllama-cli/src/: main.rs
ettllama-server/: Cargo.toml
ettllama-server/src/: main.rs
