[package]
name = "ettllama-cli"
version = "0.1.0"
edition = "2021"
authors = ["flippette <quangdatle2006@outlook.com>"]
license = "Unlicense"

[dependencies]
color-eyre.workspace = true
eyre.workspace = true
futures.workspace = true
http.workspace = true
inquire.workspace = true
owo-colors.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trust-dns-resolver.workspace = true
tungstenite.workspace = true
webpki-roots.workspace = true
